// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnsupportedStudentsPure handles when limit reached 1`] = `
<div
  className="UnsupportedStudentsPure"
>
  <div
    style={
      Object {
        "backgroundColor": "#eee",
        "borderBottom": "1px solid #ccc",
        "color": "black",
        "padding": 10,
      }
    }
  >
    Students to check on
  </div>
  <div
    className="Card "
    style={
      Object {
        "border": "none",
        "borderRadius": 3,
        "padding": 10,
      }
    }
  >
    <div>
      There are 
      <b>
        129
         students
      </b>
       you work with who have a D or an F right now but haven't been mentioned in NGE or 10GE for the last month.
    </div>
    <div
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/67"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Skywalker
            </a>
          </span>
          <span>
             has a 
            F
             in 
            BIOTECHNOLOGY 2
             (
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
            )
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/115"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Minnie
               
              Pan
            </a>
          </span>
          <span>
             has a 
            F
             in 
            PHYSICS AP
             (
            <a
              href="/sections/6"
            >
              SCI-201B
            </a>
            )
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/73"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Kenobi
            </a>
          </span>
          <span>
             has a 
            F
             in 
            BIOTECHNOLOGY 2
             (
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
            )
          </span>
        </div>
      </div>
    </div>
    <div>
      There are 
      129
       students total.  Start with checking in on these first 
      3
       students.
    </div>
  </div>
</div>
`;

exports[`UnsupportedStudentsPure pure component matches snapshot 1`] = `
<div
  className="UnsupportedStudentsPure"
>
  <div
    style={
      Object {
        "backgroundColor": "#eee",
        "borderBottom": "1px solid #ccc",
        "color": "black",
        "padding": 10,
      }
    }
  >
    Students to check on
  </div>
  <div
    className="Card "
    style={
      Object {
        "border": "none",
        "borderRadius": 3,
        "padding": 10,
      }
    }
  >
    <div>
      There are 
      <b>
        129
         students
      </b>
       you work with who have a D or an F right now but haven't been mentioned in NGE or 10GE for the last month.
    </div>
    <div
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/67"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Skywalker
            </a>
          </span>
          <span>
             has a 
            F
             in 
            BIOTECHNOLOGY 2
             (
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
            )
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/115"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Minnie
               
              Pan
            </a>
          </span>
          <span>
             has a 
            F
             in 
            PHYSICS AP
             (
            <a
              href="/sections/6"
            >
              SCI-201B
            </a>
            )
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/73"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Kenobi
            </a>
          </span>
          <span>
             has a 
            F
             in 
            BIOTECHNOLOGY 2
             (
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
            )
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/87"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Kenobi
            </a>
          </span>
          <span>
             has a 
            F
             in 
             (
            <a
              href="/sections/3"
            >
              ART-302A
            </a>
            )
          </span>
        </div>
      </div>
    </div>
    <div>
      <a
        href="#"
        onClick={[Function]}
      >
        See more
      </a>
    </div>
  </div>
</div>
`;
